# jsonsor

./: Cargo.toml  LICENSE  Makefile  README.md  jsonsor.arch  lib.rs
.github/workflows/: rust.yml
benches/: bench1.rs  bench1.sample.ndjson
src/: arrow.rs  chunk.rs  field_func.rs  jsonsor.rs  jsonsor_par.rs  lib.rs  schema.rs  stream.rs
tests/: test_arrow.rs  test_jsonsor.rs  test_jsonsor_par.rs  test_lib.rs  test_stream.rs
