[package]
name = "jsonsor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["arrow", "ffi"]
arrow = ["dep:arrow"]
ffi = []

[dependencies]
flate2 = "1.1.5"
mimalloc = { version = "*", features = ["v3"] }
arrow = { version = "57", features = ["json"], optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
