[package]
name = "jsonsor"
version = "0.1.0"
edition = "2021"
authors = ["ev@ekozhevnikov.com"]
description = "A high-performance JSON schema reconciliation and data harmonization library"
license = "MIT"
repository = "git@github.com:jsonsor/jsonsor.git"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["arrow", "ffi"]
arrow = ["dep:arrow", "dep:io-pipe"]
ffi = []

[dependencies]
flate2 = "1.1.5"
mimalloc = { version = "0.1.48", features = ["v3"] }
arrow = { version = "57", features = ["json", "ffi"], optional = true }
io-pipe = { version = "0.7.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "bench1"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
